# AI-Filesystem-Finder

./: .gitignore  activate.sh  pyproject.toml  readme.md
config/: __init__.py
docs/: __init__.py
src/: __init__.py
src/finder/: __init__.py
src/finder/agents/: __init__.py
src/finder/cli/: __init__.py
src/finder/config/: __init__.py  parser.py
src/finder/core/: __init__.py
src/finder/models/: __init__.py  config.py  search_query.py  search_results.py
src/finder/tools/: __init__.py  fs_walker.py
tests/: __init__.py
tests/unit/: test_config.py  test_config_parser.py  test_fs_walker.py  test_ignore_patterns.py  test_search_query.py  test_search_results.py
